Fix: fixed bug where previosLi counter was out of bounds
Also fixed bug where timer runs out and user clicks quit but it was saving the prize counter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --dark-blue: rgb(7, 7, 67);
+    --dark-blue: rgb(2, 2, 31);
     --border: lightblue;
 }
 
@@ -48,7 +48,7 @@ p ,button{
     width: 100%;
     height: 100%;
     background: url(../images/bg.png) repeat-x;
-    background-size: 100% 100%;
+    
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -76,9 +76,13 @@ p ,button{
     border-radius: 30px;
     background-color: var(--dark-blue);
     padding: 50px;
-    height: 75vh;
-    width: 70vw;
+    height: 70vh;
+    width: 60vw;
     z-index: 5;
+}
+
+#outer-container h2 {
+    border-bottom: 2px solid white; 
 }
 
 .container {
@@ -86,8 +90,8 @@ p ,button{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    padding: 20px;
-    height: 100%;
+    padding: 25px;
+    height: 85%;
     width: 100%;
     z-index: 1;
     overflow: scroll;
@@ -96,19 +100,33 @@ p ,button{
 
 #done {
     width:50%;
-    height: 20px;
+    height: 30px;
     background-size: contain;
     position: absolute;
     bottom: 0;
 }
 
-#container ol{
-    margin: 5px;
+.instrucions-ol li{
+    margin-top: 20px;
+}
+.instrucions-ol ul {
+    list-style-type: square;
+    margin-left: 20px;
 }
 
-#container p{
+.instrucions-ol p{
     font-size: 1em;
     font-family: 'Times New Roman', Times, serif;
+}
+
+#score-list li{
+    font-size: 1em;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 10px;
+    margin-top: 10px;
+    border: 1px solid white;
+    padding: 5px;
+
 }
 
 .flex-column {
